# CGMath

./: CMakeLists.txt  README.md
include/: vec.h
source/: main.cpp  vec.cpp
